--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,12 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script src="js/jquery-1.9.0.min.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/mainScreen.js"></script>
+
     </body>
 </html>
