--- a/www/html/mainScreen.html
+++ b/www/html/mainScreen.html
@@ -1,11 +1,32 @@
 <div id="mainScreen" data-role="page">
  
     <div data-role="header" data-id="persistent" data-position="fixed" data-tap-toggle="false">
-        
+        <h1> FireWatch </h1>
     </div>
  
     <div data-role="content"> 
-
+        <ul data-role="listview" id="listadoNotificaciones">
+            <li>
+                <h3>
+                    Notificación #1
+                </h3>    
+            </li>
+            <li>
+                <h2>
+                    Notificación #2
+                </h2>    
+            </li>  
+            <li>
+                <h1>
+                    Notificación #3
+                </h1>    
+            </li> 
+            <li>
+                <div>
+                    Notificación #4
+                </div>    
+            </li>     
+        </ul>    
     </div>
 
     <div data-role="footer" data-position="fixed">
