--- a/www/index.html
+++ b/www/index.html
@@ -35,18 +35,40 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="themes/Fire.css" />
-        <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+
+        <div id="mainScreen" data-role="page">
+            <div data-role="header" data-id="persistent" data-position="fixed" data-tap-toggle="false">
+                <h1> FireWatch </h1>
+            </div>
+         
+            <div data-role="content"> 
+                <ul data-role="listview" id="listadoNotificaciones">
+                    <li>
+                        <a>
+                            <h2>
+                                Murcia-Alicante
+                            </h2> 
+                            <p>
+                                Visto desde autovia A-7, direccion Alicante. Visto desde autovia A-7, direccion Alicante. Visto desde autovia A-7, direccion Alicante. Visto desde autovia A-7, direccion Alicante. Visto desde autovia A-7, direccion Alicante. Visto desde autovia A-7, direccion Alicante.
+                            </p>   
+                        </a>
+                    </li>    
+                </ul>    
+            </div>
+
+            <div data-role="footer" data-position="fixed">
+               <a class="ui-btn ui-corner-all" data-rel="back">Volver</a>
             </div>
         </div>
+
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/util.js"></script>
+        <script type="text/javascript" src="js/getService.js"></script>
+        <script type="text/javascript" src="js/gestorDatos.js"></script>
         <script type="text/javascript" src="js/mainScreen.js"></script>
         <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
