--- a/www/html/page_detalle.html
+++ b/www/html/page_detalle.html
@@ -1,4 +1,4 @@
-<div id="page_detalle" data-role="page" id="city" class="demo-page" data-dom-cache="true" data-theme="b" data-prev="prevCity" data-next="nextCity" data-url="city">
+<div id="page_detalle" data-role="page" class="demo-page" data-dom-cache="true" data-theme="a" data-prev="prevCity" data-next="nextCity" data-url="city">
     <div data-role="header" data-id="persistent" data-position="fixed" data-tap-toggle="false">
         <h1> FireWatch </h1>
     </div>
@@ -7,10 +7,13 @@
                 <label for="textinput-1">Regi&oacute;n/Zona:</label>
                 <input disabled="disabled" type="text" name="textinput-1" id="textinput-1" placeholder="Text input" value="">
         </div>
+        <div data-demo-html="#city" data-demo-js="#demo-script" data-demo-css="#demo-style">
+            <p><a href="newyork.html" data-ajax="false" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">Galleria imagenes</a></p>
+        </div>
         <div id="trivia-city" class="trivia ui-content" data-role="popup" data-position-to="window" data-tolerance="50,30,30,30" data-theme="a">
             <a href="#" data-rel="back" class="ui-btn ui-btn-right ui-btn-b ui-btn-icon-notext ui-icon-delete ui-corner-all">Close</a>
             <p>Here some text.</p>
-        </div><!-- /popup -->
+        </div>
         <!-- MAPA-->
         <div class="ui-field-contain">
         </div>
