--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,9 @@
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/page_insertar.js"></script>
+        <script type="text/javascript" src="js/page_detalle.js"></script>
+        
         <script type="text/javascript" src="js/util.js"></script>
         <script type="text/javascript" src="js/getService.js"></script>
         <script type="text/javascript" src="js/gestorDatos.js"></script>
