--- a/www/html/page_detalle.html
+++ b/www/html/page_detalle.html
@@ -15,11 +15,11 @@ $(document).on("pagecreate", function() {
     <div role="main" class="ui-content">
         <div class="ui-field-contain">
                 <label for="textinput-1">Regi&oacute;n/Zona:</label>
-                <p id="regionZona" class="parrafo">Alicante</p>
+                <p id="regionZona" class="parrafo"></p>
         </div>
         <div class="ui-field-contain">
                 <label for="textinput-1">Fecha/Hora:</label>
-                <p id="FechaHora" class="parrafo">14/09/2018 14:00</p>
+                <p id="FechaHora" class="parrafo"></p>
                 
         </div>
         <div class="ui-field-contain">
@@ -55,5 +55,6 @@ $(document).on("pagecreate", function() {
     <div class="ui-field-contain">
     </div>
     <div data-role="footer" data-position="fixed">
+        <a class="ui-btn ui-corner-all" data-rel="back">Volver</a>
     </div>
 </div>
