--- a/www/html/page_detalle.html
+++ b/www/html/page_detalle.html
@@ -8,7 +8,7 @@ $(document).on("pagecreate", function() {
     });
 });
 </script>
-<div id="page_detalle" data-role="page" class="demo-page" data-dom-cache="true" data-theme="a" data-prev="prevCity" data-next="nextCity" data-url="city">
+<div id="page_detalle" data-role="page">
     <div data-role="header" data-id="persistent" data-position="fixed" data-tap-toggle="false">
         <h1> FireWatch </h1>
     </div>
