page_detalle.html y page_detalle.js

--- a/www/html/page_detalle.html
+++ b/www/html/page_detalle.html
@@ -48,7 +48,7 @@ $(document).on("pagecreate", function() {
             </div>
         </div>
         <div class="ui-field-contain">
-                <a href="#" class="ui-btn" onclick="">Mapa</a>
+                <a onclick="page_detalle.abrirMapa()" class="ui-btn" >Abrir Mapa</a>
         </div>
     </div>
     <!-- MAPA-->
