--- a/www/html/page_insertar.html
+++ b/www/html/page_insertar.html
@@ -4,8 +4,20 @@
     </div>
     <div role="main" class="ui-content">
         <div class="ui-field-contain">
+            <p>Se enviar&aacute; el aviso de fuego cercano a su posici&oacute;n:</p>
+            <b id="coordInsert"></b>
+        </div>
+        <div class="ui-field-contain">
             <label for="textarea-1">Comentarios:</label>
             <textarea cols="60" rows="8" name="textarea-1" id="textarea-1">(Opcional)</textarea>
+        </div>
+        <div class="ui-field-contain">
+            <a href="#popupBasic" data-rel="popup" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-transition="pop">Enviar</a>
+            <a href="#" data-rol="back">Salir</a>
+            <div data-role="popup" id="popupBasic">
+                <p>Se ha enviado su notificaci&oacute;n correctamente, gracias por su colaborac&oacute;n</p>
+                <a href="#" data-rol="back">Salir</a>
+            </div>
         </div>
     </div>
     <div data-role="footer" data-position="fixed">
