Añadido boton de crear

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,8 @@
                 </div>
             </div>
 
+            <button id="nuevo" class="ui-btn ui-icon-plus ui-btn-icon-notext"></button>
+
         </div>
         
     </body>
