--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <button id="nuevo" class="ui-btn ui-icon-plus ui-btn-icon-notext"></button>
+            <button id="nuevo" onclick="index.addFuego()" class="ui-btn ui-icon-plus ui-btn-icon-notext"></button>
 
         </div>
         
