--- a/www/html/page_insertar.html
+++ b/www/html/page_insertar.html
@@ -13,10 +13,10 @@
         </div>
         <div class="ui-field-contain">
             <a href="#popupBasic" data-rel="popup" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-transition="pop">Enviar</a>
-            <a href="#" data-rol="back">Salir</a>
+            <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">Salir</a>
             <div data-role="popup" id="popupBasic">
                 <p>Se ha enviado su notificaci&oacute;n correctamente, gracias por su colaborac&oacute;n</p>
-                <a href="#" data-rol="back">Salir</a>
+                <a href="#" id="salir" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" >Salir</a>
             </div>
         </div>
     </div>
